--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@
     <input type="date" name="" value=""><br>
     <label>select the city</label>
       <select>
-    <option value="">koderma</option>
+    <option value="">bhopal</option>
     <option value="">hazaribagh</option>
     <option value="">ranchi</option>
       </select>
